tests/grammar/valid/core-control-flow-while-01.vit
entry main at core/app {
  let i = 0

  while i < 3 {
    set i = i + 1
  }

  for item in items {
    continue
  }

  give i
}
